tests/atest/invalid_library/test_data/LibraryWithFailingInit.py
class LibraryWithFailingInit:
    def __init__(self):
        raise ValueError("Invalid value")
